--- a/pages/ocorrencia.html
+++ b/pages/ocorrencia.html
@@ -94,7 +94,7 @@
         .descrition {
             display: flex;
             /* width: 20%; */
-            height: 65%;
+            /* height: 65%; */
             justify-content: space-between;
         }
 
@@ -108,7 +108,7 @@
         .container-ultimo {
             display: flex;
             background-color: #333333;
-            width: 91%;
+            width: 90%;
             height: 98%;
             border-radius: 10px;
         }
@@ -182,70 +182,70 @@
             <!-- <div class="form-group"> -->
                 <div class="column">
                     <div class="block px-3">
-                        <div class="descrition d-flex" style="gap: 133px; width: 100%;">CAUSADO POR ANIMAIS
+                        <div class="descrition d-flex" style="width: 100%;">CAUSADO POR ANIMAIS
                             <div class="form-check">
                                 <input name="grupo" class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                             </div>
                         </div>
                     </div>
                     <div class="block px-3">
-                        <div class="descrition d-flex" style="width: 100%; gap: 101px;">COM MEIO DE TRANSPORTE
+                        <div class="descrition d-flex" style="width: 100%;">COM MEIO DE TRANSPORTE
                             <div class="form-check">
                                 <input name="grupo" class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                             </div>
                         </div>
                     </div>
                     <div class="block px-3">
-                        <div class="descrition d-flex" style="width: 100%; gap: 31px;">DESMORONAMENTO/ DESLIZAMENTO
+                        <div class="descrition d-flex" style="width: 100%;">DESMORONAMENTO/ DESLIZAMENTO
                             <div class="form-check">
                                 <input name="grupo" class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                             </div>
                         </div>
                     </div>
                     <div class="block px-3">
-                        <div class="descrition d-flex" style="width: 100%; gap: 120px;">EMERGÊNCIA MÉDICA
+                        <div class="descrition d-flex" style="width: 100%;">EMERGÊNCIA MÉDICA
                             <div class="form-check">
                                 <input name="grupo" class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                             </div>
                         </div>
                     </div>
                     <div class="block px-3">
-                        <div class="descrition d-flex" style="width: 100%; gap: 120px;">QUEDA DE ALTURA 2M
+                        <div class="descrition d-flex" style="width: 100%;">QUEDA DE ALTURA 2M
                             <div class="form-check">
                                 <input name="grupo" class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                             </div>
                         </div>
                     </div>
                     <div class="block px-3">
-                        <div class="descrition d-flex" style="width: 100%; gap: 154px;">TENTATIVA DE SUICÍDIO
+                        <div class="descrition d-flex" style="width: 100%;">TENTATIVA DE SUICÍDIO
                             <div class="form-check">
                                 <input name="grupo" class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                             </div>
                         </div>
                     </div>
                     <div class="block px-3">
-                        <div class="descrition d-flex" style="width: 100%; gap: 69px;">QUEDA PRÓPRIA ALTURA
+                        <div class="descrition d-flex" style="width: 100%;">QUEDA PRÓPRIA ALTURA
                             <div class="form-check">
                                 <input name="grupo" class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                             </div>
                         </div>
                     </div>
                     <div class="block px-3">
-                        <div class="descrition d-flex" style="width: 100%; gap: 120px;">AFOGAMENTO
+                        <div class="descrition d-flex" style="width: 100%;">AFOGAMENTO
                             <div class="form-check">
                                 <input name="grupo" class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                             </div>
                         </div>
                     </div>
                     <div class="block px-3">
-                        <div class="descrition d-flex" style="width: 100%; gap: 120px;">AGRESSÃO
+                        <div class="descrition d-flex" style="width: 100%;">AGRESSÃO
                             <div class="form-check">
                                 <input name="grupo" class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                             </div>
                         </div>
                     </div>
                     <div class="block px-3">
-                        <div class="descrition d-flex" style="width: 100%; gap: 108px;">ATROPELAMENTO
+                        <div class="descrition d-flex" style="width: 100%;">ATROPELAMENTO
                             <div class="form-check">
                                 <input name="grupo" class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                             </div>
@@ -254,70 +254,70 @@
                 </div>
                 <div class="column">
                     <div class="block px-3">
-                        <div class="descrition d-flex" style="width: 100%; gap: 90px;">CHOQUE ELÉTRICO
+                        <div class="descrition d-flex" style="width: 100%;">CHOQUE ELÉTRICO
                             <div class="form-check">
                                 <input name="grupo" class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                             </div>
                         </div>
                     </div>
                     <div class="block px-3">
-                        <div class="descrition d-flex" style="width: 100%; gap: 120px;">DESABAMENTO
+                        <div class="descrition d-flex" style="width: 100%;">DESABAMENTO
                             <div class="form-check">
                                 <input name="grupo" class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                             </div>
                         </div>
                     </div>
                     <div class="block px-3">
-                        <div class="descrition d-flex" style="width: 100%; gap: 120px;">DOMÉSTICO
+                        <div class="descrition d-flex" style="width: 100%;">DOMÉSTICO
                             <div class="form-check">
                                 <input name="grupo" class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                             </div>
                         </div>
                     </div>
                     <div class="block px-3">
-                        <div class="descrition d-flex" style="width: 100%; gap: 120px;">ESPORTIVO
+                        <div class="descrition d-flex" style="width: 100%;">ESPORTIVO
                             <div class="form-check">
                                 <input name="grupo" class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                             </div>
                         </div>
                     </div>
                     <div class="block px-3">
-                        <div class="descrition d-flex" style="width: 100%; gap: 120px;">INTOXICAÇÃO
+                        <div class="descrition d-flex" style="width: 100%;">INTOXICAÇÃO
                             <div class="form-check">
                                 <input name="grupo" class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                             </div>
                         </div>
                     </div>
                     <div class="block px-3">
-                        <div class="descrition d-flex" style="width: 100%; gap: 120px;">QUEDA BICICLETA
+                        <div class="descrition d-flex" style="width: 100%;">QUEDA BICICLETA
                             <div class="form-check">
                                 <input name="grupo" class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                             </div>
                         </div>
                     </div>
                     <div class="block px-3">
-                        <div class="descrition d-flex" style="width: 100%; gap: 120px;">QUEDA MOTO
+                        <div class="descrition d-flex" style="width: 100%;">QUEDA MOTO
                             <div class="form-check">
                                 <input name="grupo" class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                             </div>
                         </div>
                     </div>
                     <div class="block px-3">
-                        <div class="descrition d-flex" style="width: 100%; gap: 115px;">QUEDA NÍVEL 2M
+                        <div class="descrition d-flex" style="width: 100%;">QUEDA NÍVEL 2M
                             <div class="form-check">
                                 <input name="grupo" class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                             </div>
                         </div>
                     </div>
                     <div class="block px-3">
-                        <div class="descrition d-flex" style="width: 100%; gap: 120px;">TRABALHO
+                        <div class="descrition d-flex" style="width: 100%;">TRABALHO
                             <div class="form-check">
                                 <input name="grupo" class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                             </div>
                         </div>
                     </div>
                     <div class="block px-3">
-                        <div class="descrition d-flex" style="width: 100%; gap: 120px;">TRANSFERÊNCIA
+                        <div class="descrition d-flex" style="width: 100%;">TRANSFERÊNCIA
                             <div class="form-check">
                                 <input name="grupo" class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                             </div>
@@ -326,13 +326,12 @@
                 </div>
             
             <!-- Caixa texto -->
-            <div class="esptext">
+            <div class="esptext mt-2">
                 <div class="container-ultimo p-3">
                     <div class="text-area">OUTRO
                         <div class="form-floating">
-                            <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea"
-                                style="height: 100%;"></textarea>
-                            <label for="floatingTextarea mt-3">Outro</label>
+                            <textarea class="form-control pt-2" id="floatingTextarea" style="height: 100%;"></textarea>
+                            <!-- <label for="floatingTextarea mt-3">Outro</label> -->
                         </div>
                     </div>
                 </div>
