--- a/pages/situation.html
+++ b/pages/situation.html
@@ -48,6 +48,7 @@
         padding: 0;
         background-color: #C1C1C1;
         color: white;
+        font-family: 'Inter', sans-serif;
     }
 
     /* Detalhes nav */
@@ -218,8 +219,8 @@
     }
 
     .checkbox-container .checkmark:after {
-        left: 6px;
-        top: 2px;
+        left: 8px;
+        top: 3px;
         width: 5px;
         height: 10px;
         border: solid rgb(0, 0, 0);
@@ -252,8 +253,62 @@
                             <li class="nav-item">
                                 <a class="nav-link" aria-current="page" href="#">TELA DE INÍCIO</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">CATEGORIAS</a>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                    aria-expanded="false">
+                                    CATEGORIAS
+                                </a>
+                                <ul class="dropdown-menu dropdown-menu-dark">
+                                    <li><a class="dropdown-item" href="#">TIPO DE OCORRÊNCIA</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">PROBLEMAS ENCONTRADOS SUSPEITOS</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="#">SINAIS E SINTOMAS</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="#">AVALIAÇÃO DO PACIENTE (GLASGOW)</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="#">LOCALIZAÇÃO DOS TRAUMAS</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="#">SINAIS VITAIS</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="#">OBJETOS RECOLHIDOS</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">FORMA DE CONDUÇÃO E DECISÃO DE TRANSPORTE</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="#">VÍTIMA ERA</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="#">PROCEDIMENTOS EFETUADOS</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="#">MATERIAIS UTILIZADOS</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="#">OBSERVAÇÕES IMPORTANTES</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="#">AVALIAÇÃO DA CINEMÁTICA</a></li>
+                                </ul>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">PERFIL</a>
@@ -261,6 +316,7 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="#">SAIR</a>
                             </li>
+                        </ul>
                     </div>
                 </div>
             </div>
