--- a/pages/sinaisesintomas.html
+++ b/pages/sinaisesintomas.html
@@ -77,7 +77,6 @@
         .descrition {
             display: flex;
             /* width: 20%; */
-            height: 65%;
             justify-content: space-between;
         }
 
@@ -144,91 +143,91 @@
         <div class="casa mt-4">
             <div class="column">
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="gap: 68px; width: 100%;">ABDOMEM SENSÍVEL OU RÍGIDO
+                    <div class="descrition d-flex" style="width: 100%;">ABDOMEM SENSÍVEL OU RÍGIDO
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 101px;">AGITAÇÃO
+                    <div class="descrition d-flex" style="width: 100%;">AGITAÇÃO
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">ANGINA DE PEITO
+                    <div class="descrition d-flex" style="width: 100%;">ANGINA DE PEITO
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">BRADICARDIA
+                    <div class="descrition d-flex" style="width: 100%;">BRADICARDIA
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">BRONCO-ASPIRADO
+                    <div class="descrition d-flex" style="width: 100%;">BRONCO-ASPIRADO
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">CIANOSE
+                    <div class="descrition d-flex" style="width: 100%;">CIANOSE
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DECORTICAÇÃO
+                    <div class="descrition d-flex" style="width: 100%;">DECORTICAÇÃO
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DESCEREBRAÇÃO
+                    <div class="descrition d-flex" style="width: 100%;">DESCEREBRAÇÃO
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DESVIO DE TRAQUÉIA
+                    <div class="descrition d-flex" style="width: 100%;">DESVIO DE TRAQUÉIA
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL
+                    <div class="descrition d-flex" style="width: 100%;">DOR LOCAL
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">ESFISEMA SUBCUTÂNEO
+                    <div class="descrition d-flex" style="width: 100%;">ESFISEMA SUBCUTÂNEO
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">FACE PÁLIDA
+                    <div class="descrition d-flex" style="width: 100%;">FACE PÁLIDA
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">HIPERTENSÃO
+                    <div class="descrition d-flex" style="width: 100%;">HIPERTENSÃO
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
@@ -237,56 +236,56 @@
 
 
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL
+                    <div class="descrition d-flex" style="width: 100%;">DOR LOCAL
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL
+                    <div class="descrition d-flex" style="width: 100%;">DOR LOCAL
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL
+                    <div class="descrition d-flex" style="width: 100%;">DOR LOCAL
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL
+                    <div class="descrition d-flex" style="width: 100%;">DOR LOCAL
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL
+                    <div class="descrition d-flex" style="width: 100%;">DOR LOCAL
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL
+                    <div class="descrition d-flex" style="width: 100%;">DOR LOCAL
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL
+                    <div class="descrition d-flex" style="width: 100%;">DOR LOCAL
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL
+                    <div class="descrition d-flex" style="width: 100%;">DOR LOCAL
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
@@ -296,91 +295,91 @@
             </div>
             <div class="column">
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 90px;">AFUNDAMENTO DE CRÂNIO
+                    <div class="descrition d-flex" style="width: 100%;">AFUNDAMENTO DE CRÂNIO
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 120px;">AMNÉSIA
+                    <div class="descrition d-flex" style="width: 100%;">AMNÉSIA
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 120px;">APINÉIA
+                    <div class="descrition d-flex" style="width: 100%;">APINÉIA
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 90px;">BRADIPNÉIA
+                    <div class="descrition d-flex" style="width: 100%;">BRADIPNÉIA
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 120px;">CEFALÉIA
+                    <div class="descrition d-flex" style="width: 100%;">CEFALÉIA
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 90px;">CONVULSÃO
+                    <div class="descrition d-flex" style="width: 100%;">CONVULSÃO
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 120px;">DEFOMIDADE
+                    <div class="descrition d-flex" style="width: 100%;">DEFOMIDADE
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 120px;">DESMAIO
+                    <div class="descrition d-flex" style="width: 100%;">DESMAIO
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 90px;">DISPNÉIA
+                    <div class="descrition d-flex" style="width: 100%;">DISPNÉIA
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 120px;">EDEMA
+                    <div class="descrition d-flex" style="width: 100%;">EDEMA
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">ESTASE DE JUGULAR
+                    <div class="descrition d-flex" style="width: 100%;">ESTASE DE JUGULAR
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">HEMORRAGIA
+                    <div class="descrition d-flex" style="width: 100%;">HEMORRAGIA
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">HIPOTENSÃO
+                    <div class="descrition d-flex" style="width: 100%;">HIPOTENSÃO
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
@@ -389,56 +388,56 @@
 
 
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL
+                    <div class="descrition d-flex" style="width: 100%;">DOR LOCAL
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL
+                    <div class="descrition d-flex" style="width: 100%;">DOR LOCAL
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL
+                    <div class="descrition d-flex" style="width: 100%;">DOR LOCAL
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL
+                    <div class="descrition d-flex" style="width: 100%;">DOR LOCAL
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL
+                    <div class="descrition d-flex" style="width: 100%;">DOR LOCAL
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL
+                    <div class="descrition d-flex" style="width: 100%;">DOR LOCAL
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL
+                    <div class="descrition d-flex" style="width: 100%;">DOR LOCAL
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL
+                    <div class="descrition d-flex" style="width: 100%;">DOR LOCAL
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
