--- a/pages/gestacional.html
+++ b/pages/gestacional.html
@@ -69,10 +69,11 @@
 <body>
     <div class="container-fluid p-0">
 
+        <!-- navbar -->
         <nav class="navbar navbar-dark" id="nav">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#"><img src="../images/avatar_bombeiro.png" width="60px"></a>
-                <p class="nav-title mt-3 fw-bold">ANAMNESE GESTACIONAL</p>
+                <p class="nav-title mt-3 fw-bold text">ANAMNESE DA EMERGÊNCIA MÉDICA</p>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
                     aria-label="Toggle navigation">
@@ -86,7 +87,6 @@
                     </div>
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-
                             <li class="nav-item">
                                 <a class="nav-link" aria-current="page" href="#">TELA DE INÍCIO</a>
                             </li>
@@ -100,7 +100,8 @@
                                     <li>
                                         <hr class="dropdown-divider">
                                     </li>
-                                    <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">PROBLEMAS ENCONTRADOS SUSPEITOS</a></li>
+                                    <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">PROBLEMAS
+                                            ENCONTRADOS SUSPEITOS</a></li>
                                     <li>
                                         <hr class="dropdown-divider">
                                     </li>
@@ -124,7 +125,8 @@
                                     <li>
                                         <hr class="dropdown-divider">
                                     </li>
-                                    <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">FORMA DE CONDUÇÃO E DECISÃO DE TRANSPORTE</a></li>
+                                    <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">FORMA DE
+                                            CONDUÇÃO E DECISÃO DE TRANSPORTE</a></li>
                                     <li>
                                         <hr class="dropdown-divider">
                                     </li>
@@ -147,14 +149,16 @@
                                     <li><a class="dropdown-item" href="#">AVALIAÇÃO DA CINEMÁTICA</a></li>
                                 </ul>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item" style="list-style-type: none">
                                 <a class="nav-link" href="#">PERFIL</a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item" style="list-style-type: none">
                                 <a class="nav-link" href="#">SAIR</a>
                             </li>
                         </ul>
                     </div>
+                </div>
+            </div>
         </nav>
 
         <form action="">
